# eden-erp

./: .dockerignore  .env.development.example  .env.local.example  .env.release.example  .gitignore  .vsconfig  AccountingModule.md  BackendApiMigration.md  BankMatchingModel.md  Dockerfile.next  DuplicatePrevention.md  FormArchitecture.md  FormLauncherForAccounting.md  FrontendDataAccessRules.md  InvoiceMatchingModel.md  OrganizationModel.md  PersonModel.md  README.md  SecurityArchitecture.md  SupabaseUsagePolicy.md  docker-compose.yml  eden-erp.esproj  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.shared.json  tsconfig.typecheck.json  vercel.json
backend/: .dockerignore  .env.development.example  .env.example  .env.release.example  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/contracts/: __init__.py  datetime_normalization.py  page_flow_contracts.py
backend/app/core/: config.py  database.py  error_tracking.py  errors.py  logging.py  metrics.py  middleware.py  persistence_contract.py  sanitization.py  security.py  serialization.py
backend/app/events/: __init__.py  contracts.py  envelope.py  registry.py
backend/app/features/: __init__.py  registry.py
backend/app/integrity/: __init__.py  checker.py  messages.py  registry.py  schemas.py
backend/app/persistence/: __init__.py  orm.py  repository.py  unit_of_work.py
backend/app/policies/: __init__.py  access_context.py  action_eligibility.py  delete_guards.py  field_control.py  operation_guards.py  permissions.py  policy_engine.py  schemas.py  scope_policy.py
backend/app/projections/: __init__.py  branch.py  company.py  current_authorities.py  current_ownership.py  fallback.py  hydration.py  partner.py  query.py  registry.py  representative.py  types.py
backend/app/schemas/: common.py  pagination.py  placeholder.py
backend/app/seeds/: __init__.py  demo_seed.py
backend/app/setup/: __init__.py  infrastructure_errors.py  readiness_checker.py  readiness_registry.py  schemas.py  tenant_readiness.py
backend/app/tests/: test_accounting_cari.py  test_accounting_reconciliation_deepening.py  test_action_center.py  test_action_eligibility.py  test_advanced_reporting.py  test_after_sales_field_service_deepening.py  test_ai_assistant_deepening.py  test_approval_service.py  test_audit_masking.py  test_auth_jwt.py  test_branch_closing_validation.py  test_branch_opening_validation.py  test_capital_increase_validation.py  test_company_card_crud.py  test_company_lifecycle_guards.py  test_company_official_change_validation.py  test_contract_based_standardization.py  test_crm_lead_opportunity_deepening.py  test_crm_stakeholder_master_data.py  test_current_ownership.py  test_current_ownership_projection.py  test_current_ownership_service.py  (+56 more)
backend/migrations/: README.md  env.py
backend/scripts/: explain_queries.py  export_openapi.py  seed_demo.py  validate_demo_data.py
(+2776 files in other folders)
