[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eden-erp-backend"
version = "0.1.0"
description = "FastAPI core backend scaffold for Eden ERP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# P1 stabilization keeps behavior stable. These files contain long SQL/domain
# expressions that need a separate no-behavior formatting pass.
"app/api/v1/accounting.py" = ["E501"]
"app/api/v1/auth.py" = ["E501"]
"app/api/v1/companies.py" = ["E501"]
"app/core/config.py" = ["E501"]
"app/core/security.py" = ["E501"]
"app/domains/audit/service.py" = ["E501"]
"app/domains/ownership/transactions.py" = ["E501"]
"app/domains/partners/service.py" = ["E501"]
"app/domains/representatives/service.py" = ["E501"]
"app/projections/company.py" = ["E501"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.eden.scripts]
dev = "uvicorn app.main:app --reload"
test = "pytest"
lint = "ruff check ."
typecheck = "mypy app"
format = "ruff format ."
